Fix issue with illustrations alignment on homepage with Firefox

--- a/src/app/pages/report/category/category.component.scss
+++ b/src/app/pages/report/category/category.component.scss
@@ -179,6 +179,7 @@ h2 {
     font-weight: bold;
     text-align: center;
     color: $white;
+    max-width: 255px;
   }
 
   .card-img-top {
